feat: add identification to inexistent branch

--- a/.github/workflows/build-homolog.yaml
+++ b/.github/workflows/build-homolog.yaml
@@ -74,6 +74,9 @@ jobs:
               git checkout $branch
               git log --pretty=format:"%h" develop | grep `git log --pretty=format:"%h" -1 $branch` &> /dev/null
               branch_merged=$?
+            else
+              echo "DEBUG: $branch não existe"
+              exit 1
             fi
             if [ $branch_exists -eq 0 ] && [ $branch_merged -ne 0 ]; then
               echo "Irá mergear branch: $branch"
